--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -2,9 +2,122 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/index.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<title>Contact</title>
 </head>
 <body>
-	nguyen tan ru by
+	<div class="container">
+		<div class="d-flex bg-gray">
+			<div class="flex-fill border-left">email</div>
+			<div class="flex-fill">message</div>
+			<div class="flex-fill border-left">icon</div>
+			<div class="flex-fill border-left">flag</div>
+			<div class="flex-fill">login</div>
+		</div>
+
+		<nav class="navbar navbar-expand-sm bg-light navbar-light">
+			<!-- Brand/logo -->
+			<a class="navbar-brand" href="#"> <img src="img/logo-organi.png"
+				alt="Logo" style="width: 160px;">
+			</a>
+
+			<!-- Links -->
+			<ul class="navbar-nav">
+				<li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">SHOP</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">BLOGS</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"> <span
+						class="material-icons"> favorite </span></a></li>
+				<li class=""><a class="nav-link" href="#"><span
+						class="material-icons"> shopping_bag </span></a></li>
+				<li class=""><a class="nav-link" href="#">item:</a></li>
+			</ul>
+		</nav>
+
+		<div class="d-flex">
+			<div class="dropdown">
+				<div class="btn btn-success dropdown-toggle" data-toggle="dropdown">All
+					department</div>
+				<div class="dropdown-menu">
+					<a class="dropdown-item" href="#">Link 1</a> <a
+						class="dropdown-item" href="#">Link 2</a> <a class="dropdown-item"
+						href="#">Link 3</a>
+				</div>
+			</div>
+
+			<!-- Multiple inputs -->
+			<div class="form-search">
+				<form>
+					<div class="input-group mb-3">
+						<div class="input-group-prepend">
+							<div class="dropdown">
+								<div class="dropdown-toggle" data-toggle="dropdown"
+									style="margin-top: 7px; font-weight: bold">All Categories</div>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" href="#">Link 1</a> <a
+										class="dropdown-item" href="#">Link 2</a> <a
+										class="dropdown-item" href="#">Link 3</a>
+								</div>
+							</div>
+						</div>
+						<input type="text" class="form-control"
+							placeholder="What do you need">
+						<div class="input-group-prepend">
+							<div class="btn btn-success" style="border-radius: .25em">SEARCH</div>
+						</div>
+					</div>
+				</form>
+			</div>
+
+
+
+		</div>
+
+		<div
+			style="background-image: url('img/tomatoes.jpg'); background-repeat: no-repeat; background-size: cover; height: 150px; opacity: 0.6">
+			abcd</div>
+
+		<div class="d-flex" style="margin-top: 20px">
+			<div class="flex-fill">
+				<span class="material-icons"> settings_phone </span>
+				<p>phone</p>
+				<p th:text=${contact.phone}></p>
+			</div>
+			<div class="flex-fill">
+				<span class="material-icons"> where_to_vote </span>
+				<p>address</p>
+				<p th:text=${contact.address}></p>
+			</div>
+			<div class="flex-fill">
+				<span class="material-icons"> query_builder </span>
+				<p>open time</p>
+				<span th:text="${contact.openTime}"></span> -> <span th:text="${contact.closeTime}">  </span>
+			</div>
+			<div class="flex-fill">
+				<span class="material-icons"> email </span>
+				<p>email</p>
+				<p th:text=${contact.email}></p>
+			</div>
+		</div>
+	</div>
+
 </body>
+<!-- jQuery library -->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </html>
