--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -5,9 +5,13 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/index.css">
+
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
+
+<!-- my css  -->
+<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
+
 <title>Contact</title>
 </head>
 <body>
@@ -98,7 +102,8 @@
 			<div class="flex-fill">
 				<span class="material-icons"> query_builder </span>
 				<p>open time</p>
-				<span th:text="${contact.openTime}"></span> -> <span th:text="${contact.closeTime}">  </span>
+				<span th:text="${contact.openTime}"></span> -> <span
+					th:text="${contact.closeTime}"> </span>
 			</div>
 			<div class="flex-fill">
 				<span class="material-icons"> email </span>
