--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -26,7 +26,7 @@
 
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
 			<!-- Brand/logo -->
-			<a class="navbar-brand" href="#"> <img src="img/logo-organi.png"
+			<a class="navbar-brand" href="#"> <img th:src="@{img/logo-organi.png}"
 				alt="Logo" style="width: 160px;">
 			</a>
 
