--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -26,8 +26,8 @@
 
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
 			<!-- Brand/logo -->
-			<a class="navbar-brand" href="#"> <img th:src="@{img/logo-organi.png}"
-				alt="Logo" style="width: 160px;">
+			<a class="navbar-brand" href="#"> <img
+				th:src="@{img/logo-organi.png}" alt="Logo" style="width: 160px;">
 			</a>
 
 			<!-- Links -->
@@ -79,16 +79,25 @@
 					</div>
 				</form>
 			</div>
-
-
-
 		</div>
 
-		<div
-			style="background-image: url('img/tomatoes.jpg'); background-repeat: no-repeat; background-size: cover; height: 150px; opacity: 0.6">
-			abcd</div>
+		<div>
+			<div class="row">
+				<div class="col-3">
+					<div th:if="${categories.empty}"> 
+						<p> no categories available</p>
+					</div>
+					<div th:each="category: ${categories}">
+						<button class="btn btn-success" th:text="${category.name}"></button>
+					</div>
+				</div>
+				<div class="col-9"
+					style="background-image: url('img/tomatoes.jpg'); background-repeat: no-repeat; background-size: cover; height: 150px; opacity: 0.6">
+				</div>
+			</div>
+		</div>
 
-		<div class="d-flex" style="margin-top: 20px">
+		<!-- 		<div class="d-flex" style="margin-top: 20px">
 			<div class="flex-fill">
 				<span class="material-icons"> settings_phone </span>
 				<p>phone</p>
@@ -110,7 +119,7 @@
 				<p>email</p>
 				<p th:text=${contact.email}></p>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 </body>
