--- a/DemoSpringMVC/WebContent/WEB-INF/views/login.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/login.html
@@ -28,7 +28,7 @@
 								name="password">
 						</div>
 					</div>
-					<button type="submit" class="btn btn-primary">Sign in</button>
+					<button type="submit" class="btn btn-success">Sign in</button>
 				</form>
 			</div>
 		</div>
