--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -15,7 +16,7 @@
 <title>Contact</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="d-flex bg-gray">
 			<div class="flex-fill border-left">email</div>
 			<div class="flex-fill">message</div>
@@ -65,9 +66,12 @@
 								<div class="dropdown-toggle" data-toggle="dropdown"
 									style="margin-top: 7px; font-weight: bold">All Categories</div>
 								<div class="dropdown-menu">
-									<a class="dropdown-item" href="#">Link 1</a> <a
-										class="dropdown-item" href="#">Link 2</a> <a
-										class="dropdown-item" href="#">Link 3</a>
+									<div th:if="${categories.empty}">
+										<p class="dropdown-item">no categories available</p>
+									</div>
+									<div th:each="category: ${categories}">
+										<a class="dropdown-item" href="#" th:text="${category.name}"></a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -83,16 +87,51 @@
 
 		<div>
 			<div class="row">
-				<div class="col-3">
-					<div th:if="${categories.empty}"> 
-						<p> no categories available</p>
+				<div class="">
+					<div th:if="${categories.empty}">
+						<p>no categories available</p>
 					</div>
 					<div th:each="category: ${categories}">
 						<button class="btn btn-success" th:text="${category.name}"></button>
 					</div>
 				</div>
-				<div class="col-9"
+
+				<!-- <div class=""
 					style="background-image: url('img/tomatoes.jpg'); background-repeat: no-repeat; background-size: cover; height: 150px; opacity: 0.6">
+				</div> -->
+
+				<div id="carousel" class="carousel slide" data-ride="carousel">
+
+					<!-- Indicators -->
+					<ul class="carousel-indicators">
+						<li data-target="#carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel" data-slide-to="1"></li>
+						<li data-target="#carousel" data-slide-to="2"></li>
+					</ul>
+
+					<!-- The slideshow -->
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img th:src="@{img/tomatoes.jpg}" alt="Los Angeles"
+								class="img-carousel">
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{img/logo-organi.png}" alt="Chicago"
+								class="img-carousel">
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{img/tomatoes.jpg}" alt="New York"
+								class="img-carousel">
+						</div>
+					</div>
+
+					<!-- Left and right controls -->
+					<a class="carousel-control-prev" href="#carousel" data-slide="prev">
+						<span class="carousel-control-prev-icon"></span>
+					</a> <a class="carousel-control-next" href="#carousel"
+						data-slide="next"> <span class="carousel-control-next-icon"></span>
+					</a>
+
 				</div>
 			</div>
 		</div>
