--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -9,14 +9,14 @@
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-
+<link id="avast_os_ext_custom_font" href="chrome-extension://eofcbnmajmjmplflapaojjnihcjkigck/common/ui/fonts/fonts.css" rel="stylesheet" type="text/css">
 <!-- my css  -->
 <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
 
 <title>Contact</title>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="d-flex bg-gray">
 			<div class="flex-fill border-left">email</div>
 			<div class="flex-fill">message</div>
@@ -70,7 +70,7 @@
 										<p class="dropdown-item">no categories available</p>
 									</div>
 									<div th:each="category: ${categories}">
-										<a class="dropdown-item" href="#" th:text="${category.name}"></a>
+										<a class="dropdown-item" th:text="${category.name}"></a>
 									</div>
 								</div>
 							</div>
@@ -78,11 +78,14 @@
 						<input type="text" class="form-control"
 							placeholder="What do you need">
 						<div class="input-group-prepend">
-							<div class="btn btn-success" style="border-radius: .25em">SEARCH</div>
+							<div onclick="getAllItem()" class="btn btn-success" style="border-radius: .25em">SEARCH</div>
 						</div>
 					</div>
 				</form>
 			</div>
+
+
+
 		</div>
 
 		<div>
@@ -112,16 +115,13 @@
 					<!-- The slideshow -->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img th:src="@{img/tomatoes.jpg}" alt="Los Angeles"
-								class="img-carousel">
+							<img th:src="@{img/tomatoes.jpg}" alt="a" class="img-carousel">
 						</div>
 						<div class="carousel-item">
-							<img th:src="@{img/logo-organi.png}" alt="Chicago"
-								class="img-carousel">
+							<img th:src="@{img/logo-organi.png}" alt="b" class="img-carousel">
 						</div>
 						<div class="carousel-item">
-							<img th:src="@{img/tomatoes.jpg}" alt="New York"
-								class="img-carousel">
+							<img th:src="@{img/tomatoes.jpg}" alt="c" class="img-carousel">
 						</div>
 					</div>
 
@@ -133,6 +133,16 @@
 					</a>
 
 				</div>
+			</div>
+		</div>
+
+		<div>
+			item
+			<div th:if="${items.empty}">
+				<p>no items available</p>
+			</div>
+			<div th:each="item: ${items}">
+				<p th:text="${item.name}"></p>
 			</div>
 		</div>
 
@@ -173,4 +183,11 @@
 <!-- Latest compiled JavaScript -->
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<!-- axios -->	
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>	
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>	
+
+<script type="text/javascript" th:src="@{js/index.js}"></script>
+	
 </html>
