--- a/DemoSpringMVC/WebContent/WEB-INF/views/item.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/item.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>item</title>
 </head>
 <body>
-403 page
+item ne
 </body>
 </html>
