--- a/DemoSpringMVC/WebContent/WEB-INF/views/css/index.css
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/css/index.css
@@ -1,4 +1,3 @@
-
 .d-flex {
 	height: 40px;
 }
@@ -11,14 +10,13 @@
 	border-style: none;
 	border-right: 2px solid gray;
 	height: 20px;
-	
 }
 
-.navbar-nav{
+.navbar-nav {
 	padding: 30px;
 }
 
-.nav-item  {
+.nav-item {
 	padding-left: 50px;
 }
 
@@ -26,25 +24,14 @@
 	margin-bottom: 100px;
 }
 
-.form-search {
-	margin-left: 20px;
-}
-
 .flex-fill {
 	text-align: center;
-}
-
-.img-carousel {
-	height: 250px;
-	width: 900px;
-}
-
-#carousel {
-  overflow: hidden;
 }
 
 * {
 	font-family: "Times New Roman", Times, serif;
 }
 
-
+.categories {
+	margin-top: 1px;
+}
