--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -9,11 +9,10 @@
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-<link id="avast_os_ext_custom_font" href="chrome-extension://eofcbnmajmjmplflapaojjnihcjkigck/common/ui/fonts/fonts.css" rel="stylesheet" type="text/css">
 <!-- my css  -->
 <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
 
-<title>Contact</title>
+<title>Trang chủ</title>
 </head>
 <body>
 	<div class="container">
@@ -46,8 +45,8 @@
 			</ul>
 		</nav>
 
-		<div class="d-flex">
-			<div class="dropdown">
+		<div class="row">
+			<div class="dropdown col-2">
 				<div class="btn btn-success dropdown-toggle" data-toggle="dropdown">All
 					department</div>
 				<div class="dropdown-menu">
@@ -58,13 +57,13 @@
 			</div>
 
 			<!-- Multiple inputs -->
-			<div class="form-search">
+			<div class="form-search col-10">
 				<form>
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
 							<div class="dropdown">
-								<div class="dropdown-toggle" data-toggle="dropdown"
-									style="margin-top: 7px; font-weight: bold">All Categories</div>
+								<div class="dropdown-toggle btn btn-success"
+									data-toggle="dropdown">All Categories</div>
 								<div class="dropdown-menu">
 									<div th:if="${categories.empty}">
 										<p class="dropdown-item">no categories available</p>
@@ -78,7 +77,8 @@
 						<input type="text" class="form-control"
 							placeholder="What do you need">
 						<div class="input-group-prepend">
-							<div onclick="getAllItem()" class="btn btn-success" style="border-radius: .25em">SEARCH</div>
+							<div onclick="getAllItem()" class="btn btn-success"
+								style="border-radius: .25em">SEARCH</div>
 						</div>
 					</div>
 				</form>
@@ -88,65 +88,343 @@
 
 		</div>
 
-		<div>
-			<div class="row">
-				<div class="">
-					<div th:if="${categories.empty}">
-						<p>no categories available</p>
-					</div>
-					<div th:each="category: ${categories}">
-						<button class="btn btn-success" th:text="${category.name}"></button>
-					</div>
-				</div>
-
-				<!-- <div class=""
+		<!-- <div class=""
 					style="background-image: url('img/tomatoes.jpg'); background-repeat: no-repeat; background-size: cover; height: 150px; opacity: 0.6">
 				</div> -->
 
-				<div id="carousel" class="carousel slide" data-ride="carousel">
-
-					<!-- Indicators -->
-					<ul class="carousel-indicators">
-						<li data-target="#carousel" data-slide-to="0" class="active"></li>
-						<li data-target="#carousel" data-slide-to="1"></li>
-						<li data-target="#carousel" data-slide-to="2"></li>
-					</ul>
-
-					<!-- The slideshow -->
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img th:src="@{img/tomatoes.jpg}" alt="a" class="img-carousel">
-						</div>
-						<div class="carousel-item">
-							<img th:src="@{img/logo-organi.png}" alt="b" class="img-carousel">
-						</div>
-						<div class="carousel-item">
-							<img th:src="@{img/tomatoes.jpg}" alt="c" class="img-carousel">
-						</div>
-					</div>
-
-					<!-- Left and right controls -->
-					<a class="carousel-control-prev" href="#carousel" data-slide="prev">
-						<span class="carousel-control-prev-icon"></span>
-					</a> <a class="carousel-control-next" href="#carousel"
-						data-slide="next"> <span class="carousel-control-next-icon"></span>
-					</a>
-
+		<div class="row">
+			<div class="col-2">
+				<div th:if="${categories.empty}">
+					<p>no items available</p>
 				</div>
+				<div th:each="category: ${categories}" class="categories">
+					<button class="btn btn-success" th:text="${category.name}" th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
+				</div>
+			</div>
+
+			<div id="carousel" class="carousel slide col-10" data-ride="carousel" style="border-radius: 5px;">
+
+				<!-- Indicators -->
+				<ul class="carousel-indicators" style="z-index: 1">
+					<li data-target="#carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#carousel" data-slide-to="1"></li>
+					<li data-target="#carousel" data-slide-to="2"></li>
+				</ul>
+
+				<!-- The slideshow -->
+				<div class="carousel-inner" style="height: 200px;">
+					<div class="carousel-item active"
+						style="width: inherit; height: inherit;">
+						<img th:src="@{img/tomatoes.jpg}"
+							style="width: 100%; height: 100%;" alt="a">
+					</div>
+					<div class="carousel-item" style="width: inherit; height: inherit;">
+						<img th:src="@{img/logo-organi.png}"
+							style="width: 100%; height: 100%;" alt="b">
+					</div>
+					<div class="carousel-item" style="width: inherit; height: inherit;">
+						<img th:src="@{img/organi.jpg}"
+							style="width: 100%; height: 100%;" alt="c">
+					</div>
+				</div>
+
+				<!-- Left and right controls -->
+				<a class="carousel-control-prev" href="#carousel" data-slide="prev">
+					<span class="carousel-control-prev-icon"></span>
+				</a> <a class="carousel-control-next" href="#carousel" data-slide="next">
+					<span class="carousel-control-next-icon"></span>
+				</a>
+
 			</div>
 		</div>
 
 		<div>
-			item
-			<div th:if="${items.empty}">
-				<p>no items available</p>
+			<div class="jumbotron jumbotron-fluid">
+				<div class="">
+					<h1>TOP SALE</h1>
+					<div class="card-deck">
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-sm-block d-md-none">
+							<!-- wrap every 2 on sm-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-md-block d-lg-none">
+							<!-- wrap every 3 on md-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-sm-block d-md-none">
+							<!-- wrap every 2 on sm-->
+						</div>
+						<div class="w-100 d-none d-lg-block d-xl-none">
+							<!-- wrap every 4 on lg-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-xl-block">
+							<!-- wrap every 5 on xl-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-sm-block d-md-none">
+							<!-- wrap every 2 on sm-->
+						</div>
+						<div class="w-100 d-none d-md-block d-lg-none">
+							<!-- wrap every 3 on md-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-sm-block d-md-none">
+							<!-- wrap every 2 on sm-->
+						</div>
+						<div class="w-100 d-none d-lg-block d-xl-none">
+							<!-- wrap every 4 on lg-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+						<div class="w-100 d-none d-md-block d-lg-none">
+							<!-- wrap every 3 on md-->
+						</div>
+						<div class="card mb-4">
+							<img class="card-img-top" th:src="@{img/nam_huong.jpg}"
+								alt="Card image">
+							<div class="card-body">
+								<h4 class="card-title">Mushrooms</h4>
+								<p class="card-text">Description</p>
+								<a href="#" class="btn btn-warning">Detail</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
 			</div>
-			<div th:each="item: ${items}">
-				<p th:text="${item.name}"></p>
+
+			<div>
+				<div class="jumbotron jumbotron-fluid">
+					<div class="">
+						<h1>TOP HOT PRODUCT</h1>
+						<div class="card-deck">
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-sm-block d-md-none">
+								<!-- wrap every 2 on sm-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-md-block d-lg-none">
+								<!-- wrap every 3 on md-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-sm-block d-md-none">
+								<!-- wrap every 2 on sm-->
+							</div>
+							<div class="w-100 d-none d-lg-block d-xl-none">
+								<!-- wrap every 4 on lg-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-xl-block">
+								<!-- wrap every 5 on xl-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-sm-block d-md-none">
+								<!-- wrap every 2 on sm-->
+							</div>
+							<div class="w-100 d-none d-md-block d-lg-none">
+								<!-- wrap every 3 on md-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-sm-block d-md-none">
+								<!-- wrap every 2 on sm-->
+							</div>
+							<div class="w-100 d-none d-lg-block d-xl-none">
+								<!-- wrap every 4 on lg-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+							<div class="w-100 d-none d-md-block d-lg-none">
+								<!-- wrap every 3 on md-->
+							</div>
+							<div class="card mb-4">
+								<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
+									alt="Card image">
+								<div class="card-body">
+									<h4 class="card-title">Ornamental Chili</h4>
+									<p class="card-text">Description</p>
+									<a href="#" class="btn btn-success">Detail</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
+	</div>
+	</div>
+</body>
+<!-- jQuery library -->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-		<!-- 		<div class="d-flex" style="margin-top: 20px">
+<!-- Popper JS -->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<!-- axios -->
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+
+<script type="text/javascript" th:src="@{js/index.js}"></script>
+
+</html>
+
+<!-- 		<div class="d-flex" style="margin-top: 20px">
 			<div class="flex-fill">
 				<span class="material-icons"> settings_phone </span>
 				<p>phone</p>
@@ -169,25 +447,3 @@
 				<p th:text=${contact.email}></p>
 			</div>
 		</div> -->
-	</div>
-
-</body>
-<!-- jQuery library -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-<!-- axios -->	
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>	
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>	
-
-<script type="text/javascript" th:src="@{js/index.js}"></script>
-	
-</html>
