--- a/DemoSpringMVC/WebContent/WEB-INF/views/js/itemByCategory.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/js/itemByCategory.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Item by category</title>
 </head>
 <body>
-403 page
+
 </body>
 </html>
