--- a/DemoSpringMVC/WebContent/WEB-INF/views/css/index.css
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/css/index.css
@@ -1,3 +1,11 @@
+.container {
+	overflow: auto;
+}
+
+.sticky {
+  position: fixed;
+  z-index: 1
+}
 .d-flex {
 	height: 40px;
 }
@@ -34,4 +42,16 @@
 
 .categories {
 	margin-top: 1px;
+}
+
+/* Bottom right text */
+.text-block {
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+	background-color: rgba(34, 34, 34, 0.5);
+	color: white;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 12px;
 }
