--- a/DemoSpringMVC/WebContent/WEB-INF/views/item.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/item.html
@@ -51,12 +51,12 @@
 						style="height: 100%; width: 100%" id="cardImg" alt="Card image">
 					<div class="card-body">
 						<h4 class="card-title" id="cardTitle"></h4>
-						<p class="card-text">Description</p>
+						<p class="card-text" id="itemPrice"></p>
 						<a class="btn btn-success" onclick="buyItem()">Buy</a>
 					</div>
 				</div>
 			</div>
-			<div class="col-6">ashdgagsgdhjagsdhjagdgjasjdhgh</div>
+			<div class="col-6" id="local">descriptionnnnnnnnnnnnnnnnnn</div>
 		</div>
 	</div>
 </body>
