--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -20,8 +20,8 @@
 			<p>no items available</p>
 		</div>
 		<div th:each="category: ${categories}" class="categories">
-			<button class="btn btn-success" th:text="${category.name}"
-				th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
+			<a class="btn btn-success" th:text="${category.name}"
+				th:id="${category.name}" th:onclick="'categoryClick(this);'"></a>
 		</div>
 	</div>
 	<div class="container">
@@ -35,7 +35,7 @@
 
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
 			<!-- Brand/logo -->
-			<a class="navbar-brand" href="#"> <img
+			<a class="navbar-brand" href="/DemoSpringMVC"> <img
 				th:src="@{img/logo-organi.png}" alt="Logo" style="width: 160px;">
 			</a>
 
@@ -48,8 +48,9 @@
 				<li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
 				<li class="nav-item"><a class="nav-link" href="#"> <span
 						class="material-icons"> favorite </span></a></li>
-				<li class=""><a class="nav-link" href="#"><span
-						class="material-icons"> shopping_bag </span></a></li>
+				<li class=""><a class="nav-link" href="/DemoSpringMVC/cart"><span
+						class="material-icons"> shopping_bag </span><span
+					class="badge badge-pill badge-danger" id="shoppingBagBadge"></span></a></li>
 				<li class=""><a class="nav-link" href="#">item:</a></li>
 			</ul>
 		</nav>
@@ -78,7 +79,8 @@
 										<p class="dropdown-item">no categories available</p>
 									</div>
 									<div th:each="category: ${categories}">
-										<a class="dropdown-item" th:text="${category.name}"></a>
+										<button class="btn btn-success" th:text="${category.name}"
+											th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
 									</div>
 								</div>
 							</div>
@@ -164,7 +166,8 @@
 								<div class="col">
 									<img class="d-block w-100 h-100"
 										style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[0].getImg()}" alt="1 slide" th:onclick="|topSaleImgClick('${itemTopSale[0].getId()}')|">
+										th:src="${itemTopSale[0].getImg()}" alt="1 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[0].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[0].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[0].getAmount()}"></p>
@@ -172,7 +175,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[1].getImg()}" alt="2 slide" th:onclick="|topSaleImgClick('${itemTopSale[1].getId()}')|">
+										th:src="${itemTopSale[1].getImg()}" alt="2 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[1].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[1].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[1].getAmount()}"></p>
@@ -180,7 +184,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[2].getImg()}" alt="3 slide" th:onclick="|topSaleImgClick('${itemTopSale[2].getId()}')|">
+										th:src="${itemTopSale[2].getImg()}" alt="3 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[2].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[2].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[2].getAmount()}"></p>
@@ -194,7 +199,8 @@
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[3].getImg()}" alt="4 slide" th:onclick="|topSaleImgClick('${itemTopSale[3].getId()}')|">
+										th:src="${itemTopSale[3].getImg()}" alt="4 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[3].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[3].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[3].getAmount()}"></p>
@@ -202,7 +208,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[4].getImg()}" alt="5 slide" th:onclick="|topSaleImgClick('${itemTopSale[4].getId()}')|">
+										th:src="${itemTopSale[4].getImg()}" alt="5 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[4].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[4].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[4].getAmount()}"></p>
@@ -210,7 +217,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[5].getImg()}" alt="6 slide" th:onclick="|topSaleImgClick('${itemTopSale[5].getId()}')|">
+										th:src="${itemTopSale[5].getImg()}" alt="6 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[5].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[5].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[5].getAmount()}"></p>
@@ -224,7 +232,8 @@
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[6].getImg()}" alt="7 slide" th:onclick="|topSaleImgClick('${itemTopSale[6].getId()}')|">
+										th:src="${itemTopSale[6].getImg()}" alt="7 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[6].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[6].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[6].getAmount()}"></p>
@@ -232,7 +241,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[7].getImg()}" alt="8 slide" th:onclick="|topSaleImgClick('${itemTopSale[7].getId()}')|">
+										th:src="${itemTopSale[7].getImg()}" alt="8 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[7].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[7].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[7].getAmount()}"></p>
@@ -240,7 +250,8 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[8].getImg()}" alt="9 slide" th:onclick="|topSaleImgClick('${itemTopSale[8].getId()}')|">
+										th:src="${itemTopSale[8].getImg()}" alt="9 slide"
+										th:onclick="|topSaleImgClick('${itemTopSale[8].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[8].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[8].getAmount()}"></p>
@@ -388,10 +399,8 @@
 			</div>
 		</div>
 
-		<div id="categoryViewer" style="height: 500px">
-		</div>
-		<div id="categoryViewerBottom">
-		</div>
+		<div id="categoryViewer" style="height: 500px"></div>
+		<div id="categoryViewerBottom"></div>
 	</div>
 </body>
 <!-- jQuery library -->
