--- a/DemoSpringMVC/WebContent/WEB-INF/views/item.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/item.html
@@ -42,6 +42,13 @@
 	</nav>
 	<!-- ./nav bar -->
 	<br>
+	<!-- ALTER -->
+	<div style="height: 50px;">
+		<div class="alert alert-success" id="success-alert" style="text-align: center;">
+			<strong>ADD 1 </strong>
+		</div>
+	</div>
+	<!-- ./ALTER -->
 	<div class="container">
 		<div class="row">
 			<div class="col-6">
