--- a/DemoSpringMVC/WebContent/WEB-INF/views/searchByCategory.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/searchByCategory.html
@@ -1,67 +1,35 @@
-<!DOCTYPE html>
 <html>
 
+
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<title>cart</title>
+	<!-- my css  -->
+
+	<title>title</title>
 </head>
 
 <body>
-
 	<div class="container">
 		<table class="table table-striped" id="tableContent">
 			<thead class="thead-dark">
 				<tr>
-					<th>Ảnh</th>
-					<th>Tên</th>
-					<th>Số lượng</th>
-					<th>Đơn giá </th>
-					<th>Thành tiền</th>
+					<th>IMG</th>
+					<th>NAME</th>
+					<th>PRICE </th>
+					<th>ACTION</th>
 				</tr>
 			</thead>
 			<tbody id="tableBody">
-				
 			</tbody>
 		</table>
-
-		<br>
-		<button class="btn btn-success" data-toggle="modal" data-target="#submitModal" id="btnSubmit">submit</button>
-
-		<!-- The Modal -->
-		<div class="modal" id="submitModal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-
-					<!-- Modal Header -->
-					<div class="modal-header">
-						<h4 class="modal-title">Confirm</h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-
-					<!-- Modal body -->
-					<div class="modal-body" style="text-align: center;">
-
-						<img th:src="@{img/aysat.jpg}" width="300px" height="300px">
-
-					</div>
-
-					<!-- Modal footer -->
-					<div class="modal-footer">
-						<button type="button" class="btn btn-danger" data-dismiss="modal">Wait a sec</button>
-						<button type="button" class="btn btn-success" onclick="submit()">Sure</button>
-					</div>
-
-				</div>
-			</div>
-		</div>
 	</div>
-
-
 </body>
+
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -76,6 +44,8 @@
 <!-- axios -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-<script type="text/javascript" th:src="@{js/cart.js}"></script>
+
+<!-- my script -->
+<script type="text/javascript" th:src="@{../js/search_by_category.js}"></script>
 
 </html>
