--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<!-- my css  -->
-<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- my css  -->
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
 
-<title>Trang chủ</title>
+	<title>Trang chủ</title>
 </head>
+
 <body>
 	<div class="col-2 sticky">
 		<div th:if="${categories.empty}">
 			<p>no items available</p>
 		</div>
 		<div th:each="category: ${categories}" class="categories">
-			<a class="btn btn-success" th:text="${category.name}"
-				th:id="${category.name}" th:onclick="'categoryClick(this);'"></a>
+			<a class="btn btn-success" th:text="${category.name}" th:id="${category.name}"
+				th:onclick="'categoryClick(this);'"></a>
 		</div>
 	</div>
 	<div class="container">
@@ -35,8 +35,8 @@
 
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
 			<!-- Brand/logo -->
-			<a class="navbar-brand" href="/DemoSpringMVC"> <img
-				th:src="@{img/logo-organi.png}" alt="Logo" style="width: 160px;">
+			<a class="navbar-brand" href="/DemoSpringMVC"> <img th:src="@{img/logo-organi.png}" alt="Logo"
+					style="width: 160px;">
 			</a>
 
 			<!-- Links -->
@@ -46,11 +46,10 @@
 				<li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">BLOGS</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
-				<li class="nav-item"><a class="nav-link" href="#"> <span
-						class="material-icons"> favorite </span></a></li>
-				<li class=""><a class="nav-link" href="/DemoSpringMVC/cart"><span
-						class="material-icons"> shopping_bag </span><span
-					class="badge badge-pill badge-danger" id="shoppingBagBadge"></span></a></li>
+				<li class="nav-item"><a class="nav-link" href="#"> <span class="material-icons"> favorite </span></a>
+				</li>
+				<li class=""><a class="nav-link" href="/DemoSpringMVC/cart"><span class="material-icons"> shopping_bag
+						</span><span class="badge badge-pill badge-danger" id="shoppingBagBadge"></span></a></li>
 				<li class=""><a class="nav-link" href="#">item:</a></li>
 			</ul>
 		</nav>
@@ -60,9 +59,8 @@
 				<div class="btn btn-success dropdown-toggle" data-toggle="dropdown">All
 					department</div>
 				<div class="dropdown-menu">
-					<a class="dropdown-item" href="#">Link 1</a> <a
-						class="dropdown-item" href="#">Link 2</a> <a class="dropdown-item"
-						href="#">Link 3</a>
+					<a class="dropdown-item" href="#">Link 1</a> <a class="dropdown-item" href="#">Link 2</a> <a
+						class="dropdown-item" href="#">Link 3</a>
 				</div>
 			</div>
 
@@ -72,24 +70,23 @@
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
 							<div class="dropdown">
-								<div class="dropdown-toggle btn btn-success"
-									data-toggle="dropdown">All Categories</div>
+								<div class="dropdown-toggle btn btn-success" data-toggle="dropdown">All Categories</div>
 								<div class="dropdown-menu">
 									<div th:if="${categories.empty}">
 										<p class="dropdown-item">no categories available</p>
 									</div>
 									<div th:each="category: ${categories}">
-										<button class="btn btn-success" th:text="${category.name}"
-											th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
+										<a class="btn btn-success" th:text="${category.name}" th:id="${category.name}"
+											th:categoryName="${category.name}"
+											th:onclick="categorySearchClick(this.getAttribute('categoryName'))"></a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<input type="text" class="form-control"
-							placeholder="What do you need">
+						<input id="searchField" type="text" class="form-control" placeholder="What do you need">
 						<div class="input-group-prepend">
-							<div onclick="getAllItem()" class="btn btn-success"
-								style="border-radius: .25em">SEARCH</div>
+							<div th:onclick="'search()'" class="btn btn-success" style="border-radius: .25em">SEARCH
+							</div>
 						</div>
 					</div>
 				</form>
@@ -116,18 +113,14 @@
 
 				<!-- The slideshow -->
 				<div class="carousel-inner" style="height: 200px;">
-					<div class="carousel-item active"
-						style="width: inherit; height: inherit;">
-						<img th:src="@{img/tomatoes.jpg}"
-							style="width: 100%; height: 100%;" alt="a">
+					<div class="carousel-item active" style="width: inherit; height: inherit;">
+						<img th:src="@{img/tomatoes.jpg}" style="width: 100%; height: 100%;" alt="a">
 					</div>
 					<div class="carousel-item" style="width: inherit; height: inherit;">
-						<img th:src="@{img/logo-organi.png}"
-							style="width: 100%; height: 100%;" alt="b">
+						<img th:src="@{img/logo-organi.png}" style="width: 100%; height: 100%;" alt="b">
 					</div>
 					<div class="carousel-item" style="width: inherit; height: inherit;">
-						<img th:src="@{img/organi.jpg}" style="width: 100%; height: 100%;"
-							alt="c">
+						<img th:src="@{img/organi.jpg}" style="width: 100%; height: 100%;" alt="c">
 					</div>
 				</div>
 
@@ -146,13 +139,11 @@
 
 		<div class="" style="margin-top: 20px;">
 			<h1>TOP SALE</h1>
-			<div id="carousel-top-sale" class="carousel slide"
-				data-ride="carousel">
+			<div id="carousel-top-sale" class="carousel slide" data-ride="carousel">
 
 				<!-- Indicators -->
 				<ul class="carousel-indicators" style="z-index: 1">
-					<li data-target="#carousel-top-sale" data-slide-to="0"
-						class="active"></li>
+					<li data-target="#carousel-top-sale" data-slide-to="0" class="active"></li>
 					<li data-target="#carousel-top-sale" data-slide-to="1"></li>
 					<li data-target="#carousel-top-sale" data-slide-to="2"></li>
 				</ul>
@@ -160,12 +151,10 @@
 				<!-- The slideshow -->
 				<div class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner" style="height: 350px;">
-						<div class="carousel-item active"
-							style="width: inherit; height: inherit;">
+						<div class="carousel-item active" style="width: inherit; height: inherit;">
 							<div class="row">
 								<div class="col">
-									<img class="d-block w-100 h-100"
-										style="width: 100%; height: 100%;"
+									<img class="d-block w-100 h-100" style="width: 100%; height: 100%;"
 										th:src="${itemTopSale[0].getImg()}" alt="1 slide"
 										th:onclick="|topSaleImgClick('${itemTopSale[0].getId()}')|">
 									<div class="text-block">
@@ -194,8 +183,7 @@
 							</div>
 						</div>
 
-						<div class="carousel-item"
-							style="width: inherit; height: inherit;">
+						<div class="carousel-item" style="width: inherit; height: inherit;">
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
@@ -227,8 +215,7 @@
 							</div>
 						</div>
 
-						<div class="carousel-item"
-							style="width: inherit; height: inherit;">
+						<div class="carousel-item" style="width: inherit; height: inherit;">
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
@@ -263,10 +250,10 @@
 				</div>
 
 				<!-- Left and right controls -->
-				<a class="carousel-control-prev" href="#carousel-top-sale"
-					data-slide="prev"> <span class="carousel-control-prev-icon"></span>
-				</a> <a class="carousel-control-next" href="#carousel-top-sale"
-					data-slide="next"> <span class="carousel-control-next-icon"></span>
+				<a class="carousel-control-prev" href="#carousel-top-sale" data-slide="prev"> <span
+						class="carousel-control-prev-icon"></span>
+				</a> <a class="carousel-control-next" href="#carousel-top-sale" data-slide="next"> <span
+						class="carousel-control-next-icon"></span>
 				</a>
 			</div>
 		</div>
@@ -276,8 +263,7 @@
 				<h1>TOP HOT PRODUCT</h1>
 				<div class="card-deck">
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -285,8 +271,7 @@
 						</div>
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -297,8 +282,7 @@
 						<!-- wrap every 2 on sm-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -309,8 +293,7 @@
 						<!-- wrap every 3 on md-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -324,8 +307,7 @@
 						<!-- wrap every 4 on lg-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -336,8 +318,7 @@
 						<!-- wrap every 5 on xl-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -351,8 +332,7 @@
 						<!-- wrap every 3 on md-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -360,8 +340,7 @@
 						</div>
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -375,8 +354,7 @@
 						<!-- wrap every 4 on lg-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -387,8 +365,7 @@
 						<!-- wrap every 3 on md-->
 					</div>
 					<div class="card mb-4">
-						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}"
-							alt="Card image">
+						<img class="card-img-top" th:src="@{img/ot_kieng.jpg}" alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Ornamental Chili</h4>
 							<p class="card-text">Description</p>
@@ -404,26 +381,21 @@
 	</div>
 </body>
 <!-- jQuery library -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"
-	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
 	crossorigin="anonymous"></script>
 
 <!-- Popper JS -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 <!-- axios -->
-<script type="text/javascript"
-	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
-<script type="text/javascript"
-	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
 <!-- my script -->
 <script type="text/javascript" th:src="@{js/index.js}"></script>
+
 </html>
