--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -31,6 +31,7 @@
 			<div class="flex-fill border-left">icon</div>
 			<div class="flex-fill border-left">flag</div>
 			<div class="flex-fill">login</div>
+			<div class="flex-fill"><a href="/DemoSpringMVC/logout">Logout</a></div>
 		</div>
 
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
