--- a/DemoSpringMVC/WebContent/WEB-INF/views/item.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/item.html
@@ -45,7 +45,7 @@
 	<!-- ALTER -->
 	<div style="height: 50px;">
 		<div class="alert alert-success" id="success-alert" style="text-align: center;">
-			<strong>ADD 1 </strong>
+			<strong id="countItemAdd"></strong>
 		</div>
 	</div>
 	<!-- ./ALTER -->
